--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       })(window, document, 'script', 'dataLayer', 'GTM-P9PCFWQD');
     </script>
     <!-- End Google Tag Manager -->
+    <script src=//b-js.ringba.com/CA3a98f858ec63494d8bf83cc492e146e8 async></script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
